Changed links to https
changed and tested.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ redirect_from: "/docs/running-tests-in-vs.html"
   xUnit.net works with ReSharper, CodeRush, TestDriven.NET and Xamarin. It is
   part of the <a href="http://www.outercurve.org/Galleries/ASPNETOpenSourceGallery">ASP.NET Open Source Gallery</a>
   under the <a href="http://www.outercurve.org/">Outercurve Foundation</a>, licensed
-  under <a href="http://opensource.org/licenses/Apache-2.0">Apache 2</a> (an OSI
+  under <a href="https://opensource.org/licenses/Apache-2.0">Apache 2</a> (an OSI
   approved license).
 </p>
 
 <blockquote><em>Follow on Twitter: <a href="https://twitter.com/xunit">@xunit</a>, <a href="https://twitter.com/jamesnewkirk">@jamesnewkirk</a>, <a href="https://twitter.com/bradwilson">@bradwilson</a>, <a href="https://twitter.com/citizenmatt">@citizenmatt</a>, <a href="https://twitter.com/onovotny">@onovotny</a></em><br />
   <em>Discussions are held on <a href="https://xunit.slack.com/">Slack</a>. Not a member yet? <a href="https://xunit-slackin.herokuapp.com/">Sign up now!</a></em><br />
   <em>Continuous integration builds are available online via <a href="http://teamcity.centurylinkcloud.com/guestLogin.html?guest=1">TeamCity</a> (sponsored by <a href="https://www.ctl.io/">CenturyLink Cloud</a>).</em><br />
-  <em>CodeRush Test Runner support is provided by <a href="http://www.devexpress.com/">DevExpress</a>.</em><br />
+  <em>CodeRush Test Runner support is provided by <a href="https://www.devexpress.com/">DevExpress</a>.</em><br />
   <em>The xUnit.net logo was designed by <a href="http://flavors.me/nathanyoung">Nathan Young</a>.</em>
 </blockquote>
 
@@ -319,13 +319,13 @@ redirect_from: "/docs/running-tests-in-vs.html"
 
 <ul>
   <li><a href="https://www.visualstudio.com/en-us/products/visual-studio-community-vs.aspx">Visual Studio Community</a></li>
-  <li><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653">.NET Framework 4.5</a></li>
+  <li><a href="https://www.microsoft.com/en-us/download/details.aspx?id=30653">.NET Framework 4.5</a></li>
   <li><a href="http://www.testdriven.net/">TestDriven.NET</a></li>
-  <li><a href="http://www.jetbrains.com/resharper/">ReSharper</a></li>
-  <li><a href="http://xamarin.com/">Xamarin</a></li>
-  <li><a href="http://www.jetbrains.com/teamcity/index.html">TeamCity</a></li>
+  <li><a href="https://www.jetbrains.com/resharper/">ReSharper</a></li>
+  <li><a href="https://xamarin.com/">Xamarin</a></li>
+  <li><a href="https://www.jetbrains.com/teamcity/index.html">TeamCity</a></li>
   <li><a href="http://confluence.public.thoughtworks.org/display/CCNET">CruiseControl .NET</a></li>
-  <li><a href="http://msdn.microsoft.com/en-us/library/0k6kkbsd.aspx">MSBuild Reference</a></li>
+  <li><a href="https://msdn.microsoft.com/en-us/library/0k6kkbsd.aspx">MSBuild Reference</a></li>
 </ul>
 
 <p>
